--- a/src/Services/Sankey.API/Sankey.API.csproj
+++ b/src/Services/Sankey.API/Sankey.API.csproj
@@ -10,10 +10,16 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.3" />
   </ItemGroup>
 
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Sankey.Domain\Sankey.Domain.csproj" />
+    <ProjectReference Include="..\..\Sankey.Infrastructure\Sankey.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
