Use SqlLite for local development.

--- a/src/Services/Sankey.API/appsettings.json
+++ b/src/Services/Sankey.API/appsettings.json
@@ -1,6 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=TheSuperSankey;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=TheSuperSankey;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "SqlLiteConnection": "DataSource=TheSuperSankey.sqllite"
   },
   "Logging": {
     "IncludeScopes": false,
