Add a docker compose for the sankey-api

--- a/src/Services/Sankey.API/Dockerfile
+++ b/src/Services/Sankey.API/Dockerfile
@@ -2,13 +2,14 @@ FROM microsoft/aspnetcore-build:2.0 AS build-env
 WORKDIR /src/Sankey.API
 
 # Copy csproj and restore as distinct layers
-COPY ./Sankey.API/*.csproj .
-RUN dotnet restore
+#COPY ./Sankey.API/*.csproj .
+#RUN dotnet restore
 
 # Copy everything else and build
 WORKDIR /src
 COPY . .
 WORKDIR /src/Sankey.API
+RUN dotnet restore
 RUN dotnet publish -c Release -o out
 
 # Build runtime image
