Add the Sankey.Web to the docker compose.

--- a/src/docker-compose.build.yml
+++ b/src/docker-compose.build.yml
@@ -6,3 +6,7 @@ services:
     build:
       context: ./Services/Sankey.API/
       dockerfile: ./Dockerfile
+  sankey-web:  
+    build:
+      context: ./Web/Sankey.Web/
+      dockerfile: ./Dockerfile   
