--- a/src/Web/Sankey.Nginx/nginx.conf
+++ b/src/Web/Sankey.Nginx/nginx.conf
@@ -34,7 +34,7 @@ http {
         }
 
         location /api/ {
-            proxy_pass http://sankey-api/api;
+            proxy_pass http://sankey-api/api/;
             proxy_cache STATIC;
             proxy_cache_valid 200 1d;
             proxy_ignore_headers Expires Cache-Control;
